--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,9 @@
     "@fontsource/roboto": "^5.2.9",
     "@mui/icons-material": "^7.3.8",
     "@mui/material": "^7.3.8",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.97.0",
     "axios": "^1.13.5",
     "framer-motion": "^12.34.1",
     "lucide-react": "^0.564.0",
